fix logo on mobile

--- a/src/components/navbar/style.scss
+++ b/src/components/navbar/style.scss
@@ -37,6 +37,10 @@
       width: 2em;
       margin-right: 1em;
     }
+
+    @media (max-width: 440px) {
+      display: none;
+    }
   }
 
   .navigation-item {
